# icopc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.cpp  config.h  icopc.cpp  icopc.dsp  icopc.dsw  icopc.h  icopc.rc  maindlg.cpp  maindlg.h  opcdaclient.cpp  opcdaclient.h  resource.h  stdafx.cpp  stdafx.h  util.py
call_thunk/: call_thunk.cpp  thunk_code_x64.cpp
docs/: config.json  model-arch.qmodel
libs/jansson/src/: hashtable_seed.c  jansson_config.h  jansson_private_config.h  lookup3.h
libs/sms/: modes_lcl.h  rotate.h  sm4.c  sm4.h  sm4_common.c
lmiced/: heap.c  heap.h  iocpserver.c  iocpserver.h  lmice.h  lmice_private.h  mmtimer.c  mmtimer.h  publish.c  publish.h  readme.md  spi.c  testspi.c  winmain.c
lmiced/doc/: lmiced.tex
lmiced/eal/: lmice_eal_common.h  lmice_eal_hash.c  lmice_eal_hash.h  lmice_eal_util.h
opc_headers/: OpcCmd.h  OpcCmd_i.c  OpcDx.h  OpcDx_i.c  OpcEnum.h  OpcEnum_i.c  opcSec.h  opcSec_i.c  opc_ae.h  opc_ae_i.c  opcbc.h  opcbc_i.c  opccomn.h  opccomn_i.c  opcda.h  opcda_i.c  opchda.h  opchda_i.c
opcda2/: .gitignore  callback.c  callback.h  group.c  group.h  opcda2_all.h  server.c  server.h  test_opc.c  trace.h  util_atomic.h  util_hash.c  util_hash.h  util_list.c  util_list.h  util_ticketlock.c  util_ticketlock.h  util_trace.c  util_trace.h
res/: icopc.exe.manifest
websocket/: base64.c  base64.h  build.bat  epollserver.cpp  epollserver.h  iocpserver.c  iocpserver.h  kqueueserver.c  kqueueserver.h  main.c  sha1.c  sha1.h  sigserver.c  sigserver.h  websocket.dsp  wsserver.c  wsserver.h
winserver/: call_thunk.cpp  call_thunk.h  config.cpp  config.h  icopc_rpc.cpp  icopc_rpc.h  icopc_server.cpp  icopc_server.h  icopc_service.cpp  resource.h  stdafx.h  win_message.h  win_message.mc  win_message1.h  win_server.cpp  win_server.h  win_server.rc  win_trace.cpp  win_trace.h  winserver.dsp  wwhy64.icns
wtclient/: WTclient.doc  WTclient.lib  WTclientAPI.h  WtclientAPIex.h  callback.c  group.c  opcda2_all.c  opcda2_all.h  server.c  server.h  test_opc.c  test_opc.o.d  util_hash.h
